--- a/PackageEasy/PackageEasy/MainWindow.xaml
+++ b/PackageEasy/PackageEasy/MainWindow.xaml
@@ -81,6 +81,10 @@
                                     </MenuItem.Icon>
                                 </MenuItem>
                             </MenuItem>
+                            <MenuItem MinWidth="50" VerticalAlignment="Center" VerticalContentAlignment="Center" FontSize="14" HorizontalContentAlignment="Center"  d:Header="数据" Header="{DynamicResource MainDataStore}">
+                                <MenuItem d:Header="路径管理" Header="{DynamicResource MainTargetPath}" Command="{Binding TargetPathCommand}" InputGestureText=""  >
+                                </MenuItem>
+                            </MenuItem>
                             <MenuItem MinWidth="50" VerticalAlignment="Center" VerticalContentAlignment="Center" FontSize="14" HorizontalContentAlignment="Center"  d:Header="帮助" Header="{DynamicResource MainHelp}">
                                 <MenuItem d:Header="关于PackageEasy" Header="{DynamicResource MainAbout}" Command="{Binding AboutCommand}" InputGestureText=""  >
                                 </MenuItem>
