--- a/PackageEasy/PackageEasy/Styles/TextBlock.xaml
+++ b/PackageEasy/PackageEasy/Styles/TextBlock.xaml
@@ -8,4 +8,7 @@
         <Setter Property="FontSize" Value="18" />
         <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
     </Style>
+    <Style x:Key="DefaultTextBlockStyle" TargetType="TextBlock">
+        <Setter Property="Foreground" Value="{DynamicResource baseForeground}"></Setter>
+    </Style>
 </ResourceDictionary>
