--- a/PackageEasy/PackageEasy/Views/Tools/SettingControl.xaml
+++ b/PackageEasy/PackageEasy/Views/Tools/SettingControl.xaml
@@ -34,11 +34,11 @@
         <StackPanel Grid.Column="1" Margin="10,10,0,0" d:Visibility="Visible" Visibility="{Binding IsChecked,ElementName=theme,Converter={StaticResource BoolToVisibilityConverter}}">
             <StackPanel Orientation="Vertical">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock d:Text="主题："  Foreground="{StaticResource mainForeground}"  Text="{DynamicResource SettingTheme}" VerticalAlignment="Center"></TextBlock>
+                    <TextBlock d:Text="主题："  Foreground="{DynamicResource mainForeground}"  Text="{DynamicResource SettingTheme}" VerticalAlignment="Center"></TextBlock>
                     <ComboBox MinWidth="120" Height="25" VerticalContentAlignment="Center" ItemsSource="{Binding ThemeList}" SelectedItem="{Binding CurrentTheme}" DisplayMemberPath="ThemeDescription" Style="{StaticResource CommonComboBoxStyle}"></ComboBox>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
-                    <TextBlock d:Text="语言："  Foreground="{StaticResource mainForeground}"  Text="{DynamicResource SettingLanguage}" VerticalAlignment="Center"></TextBlock>
+                    <TextBlock d:Text="语言："  Foreground="{DynamicResource mainForeground}"  Text="{DynamicResource SettingLanguage}" VerticalAlignment="Center"></TextBlock>
                     <ComboBox MinWidth="120" Height="25" VerticalContentAlignment="Center" ItemsSource="{Binding LanguageTypes}" SelectedItem="{Binding SelectedLanguageType}" DisplayMemberPath="DisplayName" Style="{StaticResource CommonComboBoxStyle}"></ComboBox>
                 </StackPanel>
             </StackPanel>
