--- a/PackageEasy/PackageEasy/Views/BaseInfoView.xaml
+++ b/PackageEasy/PackageEasy/Views/BaseInfoView.xaml
@@ -129,14 +129,14 @@
 
         <TextBlock Grid.Row="5" d:Text="工作目录:"  Grid.Column="2" Text="{DynamicResource BaseInfoWorkSapce}" VerticalAlignment="Center"  HorizontalAlignment="Right"></TextBlock>
         <StackPanel Orientation="Horizontal"  Grid.Row="5" Grid.RowSpan="3" Grid.Column="3">
-            <StackPanel IsEnabled="{Binding IsUseRelativePath,Converter={StaticResource BoolRevolveConverter}, ConverterParameter=1}" Orientation="Horizontal">
+            <StackPanel VerticalAlignment="Top" IsEnabled="{Binding IsUseRelativePath,Converter={StaticResource BoolRevolveConverter}, ConverterParameter=1}" Orientation="Horizontal">
                 <TextBox Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" Text="{Binding WorkSpace,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" VerticalAlignment="Top" Style="{StaticResource CommonTextBox}" Width="150" MinHeight="30" TextWrapping="WrapWithOverflow"  Margin="5,10,0,10"></TextBox>
                 <Button Width="50" Height="30" Content="..." VerticalAlignment="Top" Command="{Binding SelectWorkSpaceCommand}" Style="{StaticResource CommonButtonStyle}" Margin="5,10,0,0"></Button>
             </StackPanel>
-            <CheckBox Foreground="{DynamicResource baseInfoForeground}" IsChecked="{Binding IsUseRelativePath}" Command="{Binding UseRelativeCommand}" d:Content="使用相对路径" Content="{DynamicResource BaseInfoUseRelative}"  Margin="5,18,0,0"  VerticalContentAlignment="Top"></CheckBox>
+            <CheckBox Foreground="{DynamicResource baseInfoForeground}"  VerticalAlignment="Top"  IsChecked="{Binding IsUseRelativePath}" Command="{Binding UseRelativeCommand}" d:Content="使用相对路径" Content="{DynamicResource BaseInfoUseRelative}"  Margin="5,18,0,0"  VerticalContentAlignment="Top"></CheckBox>
         </StackPanel>
-        <TextBlock Grid.Row="6" d:Text="安装到所有用户:" Grid.Column="2" Text="{DynamicResource BaseInfoInstallForALL}" VerticalAlignment="Center"  HorizontalAlignment="Right"></TextBlock>
-        <StackPanel Grid.Row="6" Grid.Column="3" Orientation="Horizontal" VerticalAlignment="Center" Grid.ColumnSpan="3" Margin="5,0,0,0">
+        <TextBlock Grid.Row="7" d:Text="安装到所有用户:" Grid.Column="2" Text="{DynamicResource BaseInfoInstallForALL}" VerticalAlignment="Center"  HorizontalAlignment="Right"></TextBlock>
+        <StackPanel Grid.Row="7" Grid.Column="3" Orientation="Horizontal" VerticalAlignment="Center" Grid.ColumnSpan="3" Margin="5,0,0,0">
             <CheckBox Foreground="{DynamicResource baseInfoForeground}" d:Content="是" Content="{DynamicResource  Sure}" IsChecked="{Binding InstallForAll}" ></CheckBox>
         </StackPanel>
 
